# CppDatabase

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: gtest.yaml
go_db_lib/: README.md  go.mod  main.go
go_db_lib/dblib/: go-lib-db.go
presentation/backend/: main.py
presentation/backend/app/: main.py
presentation/backend/app/db_lib/: dblib.py
presentation/backend/app/routes/: db_routes.py
presentation/backend/app/services/: db_service.py
python_db_lib/: README.md  setup.py
python_db_lib/examples/: example.py
python_db_lib/python_db_lib/: __init__.py  database.py
scripts/: format-all.sh
src/: CMakeLists.txt  main.cpp
src/Database/: ExtDatabase.cpp  ExtDatabase.hpp  IDatabase.cpp  IDatabase.hpp
src/Log/: Logger.cpp  Logger.hpp
src/Network/: BodyParser.cpp  BodyParser.hpp  HTTPServer.cpp  HTTPServer.hpp  Handlers.cpp  Handlers.hpp  IHandler.hpp  IRequestParser.hpp  IRouter.hpp  RequestParser.cpp  RequestParser.hpp  ResponseSerializer.cpp  ResponseSerializer.hpp  Router.cpp  Router.hpp
src/Network/API/: IHandler.hpp  IRequestParser.hpp  IRouter.hpp
src/Network/Types/: Request.hpp  Response.hpp
src/Types/: Request.cpp  Request.hpp
src/cli/: CMakeLists.txt
src/db/: CMakeLists.txt
tests/: CMakeLists.txt  db-tests.cpp  parser-tests.cpp  second.cpp  serializer-tests.cpp
tests/include/: catch.hpp  tests.hpp
tests/src/: basic-tests.cpp
