cmake_minimum_required(VERSION 3.12)

project(Database VERSION 0.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Database src/main.cpp
        src/Database/IDatabase.cpp
        src/Database/IDatabase.hpp
        src/Database/ExtDatabase.cpp
        src/Database/ExtDatabase.hpp
        )